syntax = "proto3";
package v6.services.pub;
option go_package = "github.com/city404/v6-public-rpc-proto/go/v6/userfile";
import "pub_common.proto";

service PubUserFile {
    rpc Create (File) returns (File) {}
    rpc Get (File) returns (File) {}
    //rpc Update (File) returns (File) {}
    rpc Rename (File) returns (BatchOperationResponse) {}
    rpc Trash (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc Move (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc Copy (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc Delete (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc DeleteTrash (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc Recover (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc BatchOperation (BatchOperationRequest) returns (BatchOperationResponse) {}
    rpc List (FileListRequest) returns (FileListResponse) {}
    rpc ListTrash (FileListRequest) returns (FileListResponse) {}
    rpc Search (SearchRequest) returns (FileListResponse) {}
    rpc CreateManageRTCOffer (ManageRTCRequest) returns (ManageRTCResponse) {}
    rpc SendClientIceCandidate (SendIceCandidateRequest) returns (SendIceCandidateResponse) {}
    rpc GetServerIceCandidate (GetIceCandidateRequest) returns (GetIceCandidateResponse) {}
    rpc ParseFileSlice (File) returns (ParseFileSliceResponse) {}
    rpc GetSliceDownloadAddress (SliceDownloadAddressRequest) returns (SliceDownloadAddressResponse) {}
    // rpc CreateDownloadAnswer (RTCDownloadInfo) returns (RTCDownloadInfo) {}
}

message File {
    string identity = 1;
    string parent = 3;
    string name = 4;
    string path = 5;
    string mime_type = 6;
    int64 size = 7;
    int64 type = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
    int64 deleted_at = 11;
    bool deleted = 12;
    bool dir = 13;
    bool hidden = 14;
    bool locked = 15;
    bool shared = 16;
    bool starred = 17;
    bool trashed = 18;
    int64 locked_at = 19;
    string locked_by = 20;
    int64 shared_at = 21;
    int64 flag = 22;
    string unique = 23;
    string content_identity = 24;
    int64 label = 25;
}

message FileListRequest {
    File parent = 1;
    File filter = 2;
    .v6.services.pub.common.ScanListRequest list_info = 3;
}

message SearchRequest {
    string name = 1;
    .v6.services.pub.common.ScanListRequest list_info = 3;
}

message FileListResponse {
    repeated File files = 1;
    .v6.services.pub.common.ScanListRequest list_info = 2;
}

message BatchOperationRequest {
    repeated File source = 1;
    File dest = 2;
    int32 operation = 3;
    int32 flag = 4;
}

message BatchOperationResponse {
    string task  = 1;
    int32 status = 2;
    int64 affected  = 3;
    int64 created_at = 4;
    int64 progress = 5;
}

message ManageRTCRequest {
    // string content_identity = 1;
    string sdp = 1;
    string offer = 2;
    string client_identity = 3;
}

message ManageRTCResponse {
    // string content_identity = 1;
    int64 file_size = 1;
    string encode_key = 2;
    string sdp = 3;
    string name = 4;
    string connection = 5;
}

message SendIceCandidateRequest {
    // string content_identity = 1;
    string client_identity = 1;
    string candidate = 2;
}

message SendIceCandidateResponse {
    // string content_identity = 1;
    string client_identity = 1;
    string candidate = 2;
}

message GetIceCandidateRequest {
    // string content_identity = 1;
    string client_identity = 1;
    string candidate = 2;
}

message GetIceCandidateResponse {
    // string content_identity = 1;
    string client_identity = 1;
    repeated string candidate = 2;
}


//message ParseFileSliceRequest {
//    string content_identity = 1;
//    // string client_identity = 2;
//}

message ParseFileSliceResponse {
    string content_identity = 1;
    repeated string meta_nodes = 2;
    repeated string raw_nodes = 3;
    int64 file_size = 4;
    repeated SliceSize sizes = 5;
    string sha1 = 6;
    string wcs_etag = 7;
}

message SliceSize {
    int64 start_index = 1;
    int64 end_index = 2;
    int64 size = 3;
}


message SliceDownloadAddressRequest {
    repeated string identity = 1;
}

message SliceDownloadAddressResponse {
    repeated SliceDownloadInfo addresses = 1;
    int64 expire_at = 2;
    string request_address = 3;
}

message SliceDownloadInfo {
    string identity = 1;
    string download_address = 2;
    string download_token = 3;
}